fix typo in permSize